--- a/docs/Makefile
+++ b/docs/Makefile
@@ -228,11 +228,12 @@ dummy:
 .PHONY: gh-pages
 gh-pages:
 	git checkout gh-pages
-	rm -rf build _sources _static
+	rm -rf build ../_sources ../_static
 	git checkout master $(GH_PAGES_SOURCES)
 	git reset HEAD
 	make html
 	mv -fv build/html/* ../
+	touch ../.nojekyll
 	rm -rf $(GH_PAGES_SOURCES) build
 	git add -A
 	git commit -m "Generated gh-pages for `git log master -1 --pretty=short --abbrev-commit`" && git push origin gh-pages ; git checkout master
